[gd_scene load_steps=2 format=2]

[ext_resource path="res://Source/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 612.0
margin_top = 146.0
margin_right = 730.0
margin_bottom = 189.0
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_left = 614.0
margin_top = 111.0
margin_right = 744.0
margin_bottom = 150.0
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnsLabel" type="Label" parent="."]
margin_left = 613.0
margin_top = 180.0
margin_right = 700.0
margin_bottom = 222.0
text = "0 turns left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="RichTextLabel" parent="."]
margin_left = 134.0
margin_top = 79.0
margin_right = 289.0
margin_bottom = 246.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
visible = false
margin_left = 615.0
margin_top = 269.0
margin_right = 656.0
margin_bottom = 289.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundToggleButton" type="Button" parent="."]
margin_left = 944.0
margin_top = 8.0
margin_right = 1018.0
margin_bottom = 28.0
toggle_mode = true
text = "Sound On"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="toggled" from="SoundToggleButton" to="." method="_on_SoundToggleButton_toggled"]
